new build of gh-pages

--- a/release_notes.html
+++ b/release_notes.html
@@ -28,8 +28,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/theme_extras.js"></script>
     <link rel="top" title="Substeps  documentation" href="index.html" />
-    <link rel="next" title="Substeps Runner - Compatibility" href="compatibility.html" />
-    <link rel="prev" title="Using Substeps Runner" href="using.html" /> 
+    <link rel="prev" title="Welcome to Substeps Runner!" href="index.html" /> 
   </head>
   <body>
       <div class="header"><h1 class="heading"><a href="index.html">
@@ -39,11 +38,9 @@
       <div class="topnav">
       
         <p>
-        «&#160;&#160;<a href="using.html">Using Substeps Runner</a>
+        «&#160;&#160;<a href="index.html">Welcome to Substeps Runner!</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="index.html">Contents</a>
-        &#160;&#160;::&#160;&#160;
-        <a href="compatibility.html">Substeps Runner - Compatibility</a>&#160;&#160;»
         </p>
 
       </div>
@@ -89,11 +86,9 @@
       <div class="bottomnav">
       
         <p>
-        «&#160;&#160;<a href="using.html">Using Substeps Runner</a>
+        «&#160;&#160;<a href="index.html">Welcome to Substeps Runner!</a>
         &#160;&#160;::&#160;&#160;
         <a class="uplink" href="index.html">Contents</a>
-        &#160;&#160;::&#160;&#160;
-        <a href="compatibility.html">Substeps Runner - Compatibility</a>&#160;&#160;»
         </p>
 
       </div>
