new build of gh-pages

--- a/_static/mavensite/usage.html
+++ b/_static/mavensite/usage.html
@@ -154,7 +154,7 @@
 
 ...
 &lt;/project&gt;
-</pre></div></div><div class="section"><h2>Reporting<a name="Reporting"></a></h2><p>The Susbteps runner plugin can create an HTML test execution report with the following configuration at plugin level as shown above.</p><p><a href="./linkToExampleReport">Here's an example</a></p><p>Results from multiple execution configurations are combined.</p><p>Alter the outputDirectory to write the html report elsewhere.</p><p>Typically we use a &#x2018;post-build&#x2019; task to move the HTML report elsewhere and create a permanent link. (In Jenkins this can be achieved with the HTMLPublisher plugin).</p></div>
+</pre></div></div><div class="section"><h2>Reporting<a name="Reporting"></a></h2><p>The Susbteps runner plugin can create an HTML test execution report with the following configuration at plugin level as shown above.</p><p><a href="http://technophobia.github.com/substeps/example_substeps_report/report_frame.html">Here's an example</a></p><p>Results from multiple execution configurations are combined.</p><p>Alter the outputDirectory to write the html report elsewhere.</p><p>Typically we use a &#x2018;post-build&#x2019; task to move the HTML report elsewhere and create a permanent link. (In Jenkins this can be achieved with the HTMLPublisher plugin).</p></div>
       </div>
     </div>
     <div class="clear">
